# Sem2_Lab7

./: CMakeLists.txt  Lab7.cpp  README.md
example/: CMakeLists.txt  main.cpp
include/: Sem2_Lab7.hpp
sources/: Sem2_Lab7.cpp
tests/: CMakeLists.txt
tests/source/: init.cpp  test.txt
